--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,10 @@ dependencies:
   firebase_auth: "^0.20.0+1"
   cloud_firestore: "^0.16.0"
   google_fonts: "^1.1.2"
-
+  image_picker: "^0.6.7+22"
+  provider: "^4.3.3"
+  path_provider: "^1.6.27"
+  firebase_storage: "^7.0.0"
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
