--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   provider: "^4.3.3"
   path_provider: "^1.6.27"
   firebase_storage: "^7.0.0"
+  fluttertoast: "^7.1.8"
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -51,6 +52,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+    
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
