--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   path_provider: "^1.6.27"
   firebase_storage: "^7.0.0"
   fluttertoast: "^7.1.8"
+  advance_pdf_viewer: "^1.2.2"
+  webview_flutter: "^1.0.7"
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
